# refactoring-exercises

./: .gitignore  GUIDE.md  IDE_SETUP.md  LINUX_REQUIREMENTS.md  README.md  REMOTE_DESKTOP_REQUIREMENTS.md  RUNNING_TESTS_ON_WINDOWS_11.md  SETUP_WINDOWS_11.md  USED_EXERCISE_TOPICS.md  generate_solution_tests.py  setup-linux.sh  setup-windows.ps1  solution_tests_setup.sh
php/: .php-cs-fixer.php  (+5 more)
python/: README.md  pyproject.toml  pytest.ini  requirements.txt
python/exercises/basic-refactorings/extract-class-mini/: task.md
python/exercises/basic-refactorings/extract-class-mini/hints/: hint-3.md
python/exercises/basis-refactorings/encapsulate-field-mini/: task.md
python/exercises/basis-refactorings/encapsulate-field-mini/hints/: hint-1.md  hint-2.md  hint-3.md
python/exercises/basis-refactorings/encapsulate-field-mini/src/: user.py
python/exercises/basis-refactorings/encapsulate-field-mini/tests/: test_user.py
python/exercises/basis-refactorings/extract-class-mini/hints/: hint-1.md  hint-2.md
python/exercises/basis-refactorings/extract-class-mini/src/: map_marker.py
python/exercises/basis-refactorings/extract-class-mini/tests/: test_map_marker.py
python/exercises/basis-refactorings/extract-method-mini/: task.md
python/exercises/basis-refactorings/extract-method-mini/hints/: hint-1.md  hint-2.md  hint-3.md
python/exercises/basis-refactorings/extract-method-mini/src/: inventory_manager.py
python/exercises/basis-refactorings/extract-method-mini/tests/: test_inventory_manager.py
python/exercises/basis-refactorings/inline-method-mini/: task.md
python/exercises/basis-refactorings/inline-method-mini/hints/: hint-1.md  hint-2.md  hint-3.md
python/exercises/basis-refactorings/inline-method-mini/src/: product_catalog_service.py
python/exercises/basis-refactorings/inline-method-mini/tests/: test_product_catalog_service.py
python/exercises/code-smells/data-clumps/: README.md  __init__.py  task.md
python/exercises/code-smells/data-clumps/hints/: hint-1.md  hint-2.md  hint-3.md
python/exercises/code-smells/data-clumps/src/: event_manager.py
python/exercises/code-smells/divergent-change/: task.md
python/exercises/code-smells/duplicate-code/: __init__.py  task.md
python/exercises/code-smells/feature-envy/: README.md  __init__.py  task.md
python/exercises/code-smells/large-class/: README.md  __init__.py  task.md
python/exercises/code-smells/long-method/: task.md
python/exercises/code-smells/primitive-obsession/: __init__.py  task.md
python/exercises/code-smells/shotgun-surgery/: task.md
python/exercises/legacy-modernization/podcast-manager/: README.md  task.md  test_feed.xml
python/exercises/podcast_mess/: podcast_mess.py
python/test_helpers/: base_test_helper.py
(+213 files in other folders)
